hphp/hack/test/typecheck/expression_trees/invalid_call2.php.exp
ERROR: File "invalid_call2.php", line 15, characters 5-15:
Only classnames and variables are allowed before `::`. (Parsing[1002])
ERROR: File "invalid_call2.php", line 15, characters 5-22:
Expression trees only support static method calls on `static` and named classes. (Parsing[1002])
